--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="flex-element">
           <form #f='ngForm' (ngSubmit)="loginSubmit(f)" class="flex-element">
-              <input (click) = "userClicked()" class="un" type="text" placeholder="Username" (ngModel)="f.value.email" name="email" required>
+              <input (click) = "userClicked()" class="un" type="text" placeholder="Email" (ngModel)="f.value.email" name="email" required>
               <input (click) = "userClicked()" class="pass" type="password"  placeholder="Password" (ngModel)="f.value.password" name="password" required>
               <button type="submit" [disabled]="!f.valid" class="submit">Sign in</button>
           </form>
@@ -35,7 +35,7 @@
           <div class="flex-element">
             <div class="signup">Welcome!</div>
             <form #formData='ngForm' (ngSubmit)="onSubmit(formData)" class="flex-element">
-              <input (click) = "userClicked()" class="signup-un" type="text" placeholder="Username" (ngModel)="formData.value.email" name="email" required>
+              <input (click) = "userClicked()" class="signup-un" type="text" placeholder="Email" (ngModel)="formData.value.email" name="email" required>
               <input (click) = "userClicked()" class="signup-pass" type="password"  placeholder="Password" (ngModel)="formData.value.password" name="password" required>
               <button type="submit" [disabled]="!formData.valid" class="signup-submit">Create my account</button>
             </form>
