--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* source: https://alligator.io/angular/custom-loading-screen/ */
+
+#loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    color: #4CAF50;
+    text-transform: uppercase;
+    font-size: 2.5em;
+    text-shadow: 2px 2px 10px rgba(0,0,0,0.2);
+}
+@keyframes dots {
+    50% {
+        transform: translateY(-.4rem);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+.d {
+    animation: dots 1.5s ease-out infinite;
+}
+.d-2 {
+    animation-delay: .5s;
+}
+.d-3 {
+    animation-delay: 1s;
+}
