--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -31,6 +31,41 @@
         box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 12);
     }
 
+
+    #logo {
+        background: url('../../assets/pencil.svg') no-repeat -1px -3px;
+        background-size: 70px;
+        color: white;
+        letter-spacing: 1px;
+        margin-right: 5px;
+        width: 70px;
+        height: 70px;
+        border: none;
+        border-radius: 70px;
+        outline: none;
+        box-sizing: border-box;
+        border: 2px solid #FFFF;
+        margin-top: -35px;
+        /* text-align: center; */
+        font-family: 'Comfortaa', sans-serif;
+    }
+
+    #logo2 {
+        background: url('../../assets/pencil2.svg') no-repeat -1px -3px;
+        background-size: 70px;
+        color: white;
+        letter-spacing: 1px;
+        margin-right: 5px;
+        width: 70px;
+        height: 70px;
+        border: none;
+        border-radius: 70px;
+        outline: none;
+        box-sizing: border-box;
+        border: 2px solid #FFFF;
+        margin-top: 15px;
+    }
+
   #fb {
       cursor: pointer;
       background:#3B5998 url('../../assets/facebook.svg') no-repeat -1px -9px;
@@ -75,10 +110,10 @@
 
     .sign {
         color: #FFFF;
-        font-family: 'Ubuntu', sans-serif;
+        font-family: 'Comfortaa', sans-serif;
         font-weight: bold;
-        font-size: 50px;
-        margin-bottom: 70px;
+        font-size: 60px;
+        margin-bottom: 30px;
     }
 
     .un {
@@ -173,7 +208,7 @@
   margin-top: 50px;
   margin-bottom: 30px;
   color:black;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Comfortaa', sans-serif;
   font-weight: bold;
   font-size: 50px;
 }
