Move toolbar HTML to ToolsComponent
 * Can change color and size

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -10,6 +10,7 @@
 <div>
     <canvas id='canvas'></canvas>
     <!-- Header -->
+    <app-tools></app-tools>
     <div class="top-bar header-bar flex-horizontal canvas-component">
         <div class="title-menu flex-horizontal">
             <div class="title-box">
@@ -38,74 +39,7 @@
         </div>
         <div id="signup-login" class="bar bar-button flex-horizontal" (click)="authentication()">{{loginButton}}</div>
     </div>
-    <!-- Main toolbar with Drawings Tools -->
-    <div class="tool-menu toolbar flex-vertical canvas-component">
-        <div id="pen" class="tool-button tool-tip active" (click)="selectPen()">
-            <i class="fa fa-pencil"></i>
-            <span class="tool-tip-text">Pen</span>
-        </div>
-        <div id="eraser" class="tool-button tool-tip" (click)="selectEraser()">
-            <i class="fa fa-eraser"></i>
-            <span class="tool-tip-text">Eraser</span>
-        </div>
-        <div id="colors" class="tool-button tool-tip" (click)="showColors()">
-            <i class="fa fa-paint-brush">
-                <div class="dropdown-caret">
-                    <i class="fa fa-caret-right"></i>
-                </div>
-            </i>
-            <span class="tool-tip-text">Colors</span>
-            <div class="dropdown-menu drop-right flex-horizontal">
-                <div id="black" class="dropdown-item" style="color:black" (click)="changeColor($event)">
-                    <i class="fa fa-circle"></i>
-                </div>
-                <div id="red" class="dropdown-item" style="color:red" (click)="changeColor($event)">
-                    <i class="fa fa-circle"></i>
-                </div>
-                <div id="orange" class="dropdown-item" style="color:orange" (click)="changeColor($event)">
-                    <i class="fa fa-circle"></i>
-                </div>
-                <div id="yellow" class="dropdown-item" style="color:yellow" (click)="changeColor($event)">
-                    <i class="fa fa-circle"></i>
-                </div>
-                <div id="green" class="dropdown-item" style="color:green" (click)="changeColor($event)">
-                    <i class="fa fa-circle"></i>
-                </div>
-                <div id="blue" class="dropdown-item" style="color:blue" (click)="changeColor($event)">
-                    <i class="fa fa-circle"></i>
-                </div>
-                <div id="darkMagenta" class="dropdown-item" style="color:darkMagenta" (click)="changeColor($event)">
-                    <i class="fa fa-circle"></i>
-                </div>
-            </div>
-        </div>
-        <div id="sizes" class="tool-button tool-tip" (click)="showSizes()">
-            <i class="fa fa-window-minimize">
-                <div class="dropdown-caret">
-                    <i class="fa fa-caret-right"></i>
-                </div>
-            </i>
-            <span class="tool-tip-text">Sizes</span>
-            <div class="slider-menu dropdown-menu drop-right flex-horizontal">
-                <div id="pen-slider-value" class="slider-value"></div>
-                <div class="slider-box">
-                    <input id="pen-size-slider" type="range" class="slider" min="1" max="6" value="2" (input)="changeSize($event)">
-                </div>
-            </div>
-        </div>
-        <div id="undo" class="tool-button tool-tip" (click)="undo()">
-            <i class="fa fa-undo"></i>
-            <span class="tool-tip-text">Undo</span>
-        </div>
-        <div id="redo" class="tool-button tool-tip" (click)="redo()">
-            <i class="fa fa-repeat"></i>
-            <span class="tool-tip-text">Redo</span>
-        </div>
-        <div id="clear" class="tool-button tool-tip" (click)="clear()">
-            <i class="fa fa-trash"></i>
-            <span class="tool-tip-text">Clear</span>
-        </div>
-    </div>
+
     <!-- Navigation Bar  -->
     <div class="navigation-bar toolbar flex-vertical canvas-component">
         <div id="zoom-in" class="tool-button tool-tip" (click) = "zoom(1.5)">
