--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -66,3 +66,22 @@
         <span class="tool-tip-text">Clear</span>
     </div>
 </div>
+<!-- Navigation Bar  -->
+<div class="navigation-bar toolbar flex-vertical canvas-component">
+    <div id="zoom-in" class="tool-button tool-tip" (click) = "zoom(1.5)">
+        <i class="fa fa-search-plus"></i>
+        <span class="tool-tip-text">Zoom In</span>
+    </div>
+    <div id="zoom-amount" class="tools-text">100%</div>
+    <div id="zoom-out" class="tool-button tool-tip" (click) = "zoom(1/1.5)">
+        <i class="fa fa-search-minus"></i>
+        <span class="tool-tip-text">Zoom Out</span>
+    </div>
+    <div class="vertical-separator flex-vertical">
+        <div class="tool-separator"></div>
+    </div>
+    <div id="move" class="tool-button tool-tip" (click) = "selectPan()">
+        <i class="fa fa-hand-paper-o"></i>
+        <span class="tool-tip-text">Move</span>
+    </div>
+</div>
