--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -25,14 +25,12 @@
             </div>
         </div>
     </div>
-    <!-- Sharing and User Bar -->
+    <!-- Invite, Upload, and Download Bar -->
     <div class="top-bar top-right-bar flex-horizontal canvas-component">
-        <!-- Copy URL, Upload, and Download Bar -->
         <div class="bar flex-horizontal">
-            <div id="share-button" class="bar-button tool-tip" (click)="showShareModal()">
-                <i class="fa fa-user-plus"></i>
-                <span id="copy-tooltip" class="tool-tip-text">Share Room</span>
-            </div>
+            <app-invite [roomID]="id"
+                        (checkRoom)="drawService.requestRoomCheck($event)">
+            </app-invite>
             <div class="bar-separator"></div>
             <div class="bar-button tool-tip">
                 <i id="download" class="fa fa-download"></i>
@@ -51,32 +49,6 @@
         <div class="bar-separator"></div>
         <div id="num-users" class="bar-button">
             <i class="fa fa-user-circle"></i>
-        </div>
-    </div>
-</div>
-<!-- Share Modal -->
-<div id="share-modal" class="modal">
-    <div class="modal-content">
-        <div class="modal-header">
-            <div class="close" (click)="closeShareModal()">&times;</div>
-            <h2>Invite or Join Others</h2>
-        </div>
-        <div class="modal-body">
-            <div class="modal-item">
-                <div class="modal-text">Current Room URL</div>
-                <div class="flex-horizontal">
-                    <input id="room-url" type="text" class="input-bar" readonly>
-                    <span id="copy-button" class="bar bar-button" (click)="copyURL()">Copy</span>
-                </div>
-            </div>
-            <div class="modal-item">
-                <div class="modal-text">Enter an existing room ID</div>
-                <div class="flex-horizontal">
-                    <input id="new-room-id" type="text" class="input-bar" maxlength="5" autocomplete="off" (input)="resetError()" >
-                    <a id="change-room-button" class="bar bar-button" (click)="changeRoom()">Change Room</a>
-                </div>
-                <div id="error-message" class="error"></div>
-            </div>
         </div>
     </div>
 </div>
