--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -10,22 +10,10 @@
 <div>
     <canvas id='canvas'></canvas>
     <!-- Header -->
-    <app-tools (setDraw)="setDraw($event)"
-                (callUndo)="undo()"
-                (callRedo)="redo()"
-                (callClear)="clear()"
-                (callZoom)="zoom($event)"
-                [scaleValue]="scaleValue">
-    </app-tools>
-    <div class="top-bar header-bar flex-horizontal canvas-component">
-        <div class="title-menu flex-horizontal">
-            <div class="title-box">
-                <input id="canvas-name" type="text" autocomplete="off"/>
-                <div id="title-text">Welcome to your canvas!</div>
-            </div>
-        </div>
-    </div>
-    <!-- Invite, Upload, and Download Bar -->
+    <app-title [roomID]=id
+                (sendTitle)="drawService.sendTitle($event.roomID, $event.name)">
+    </app-title>
+    <!-- Invite, Download, and Upload Bar -->
     <div class="top-bar top-right-bar flex-horizontal canvas-component">
         <div class="bar flex-horizontal">
             <app-invite [roomID]="id"
@@ -43,6 +31,14 @@
         </div>
         <div id="signup-login" class="bar bar-button flex-horizontal" (click)="authentication()">{{loginButton}}</div>
     </div>
+    <!-- Toolbar -->
+    <app-tools (setDraw)="setDraw($event)"
+                (callUndo)="undo()"
+                (callRedo)="redo()"
+                (callClear)="clear()"
+                (callZoom)="zoom($event)"
+                [scaleValue]="scaleValue">
+    </app-tools>
     <!-- User Count -->
     <div class="bottom-right-bar bar flex-horizontal canvas-component">
         <div id="num-users-text" class="bar-text"></div>
