--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -16,25 +16,8 @@
         </i>
         <span class="tool-tip-text">Colors</span>
         <div class="dropdown-menu drop-right flex-horizontal">
-            <div id="black" class="dropdown-item" style="color:black" (click)="changeColor($event)">
-                <i class="fa fa-circle"></i>
-            </div>
-            <div id="red" class="dropdown-item" style="color:red" (click)="changeColor($event)">
-                <i class="fa fa-circle"></i>
-            </div>
-            <div id="orange" class="dropdown-item" style="color:orange" (click)="changeColor($event)">
-                <i class="fa fa-circle"></i>
-            </div>
-            <div id="yellow" class="dropdown-item" style="color:yellow" (click)="changeColor($event)">
-                <i class="fa fa-circle"></i>
-            </div>
-            <div id="green" class="dropdown-item" style="color:green" (click)="changeColor($event)">
-                <i class="fa fa-circle"></i>
-            </div>
-            <div id="blue" class="dropdown-item" style="color:blue" (click)="changeColor($event)">
-                <i class="fa fa-circle"></i>
-            </div>
-            <div id="darkMagenta" class="dropdown-item" style="color:darkMagenta" (click)="changeColor($event)">
+            <div *ngFor="let color of allColors"
+                class="dropdown-item" [style.color]="color" (click)=changeColor(color)>
                 <i class="fa fa-circle"></i>
             </div>
         </div>
