--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -8,7 +8,7 @@
         <i class="fa fa-eraser"></i>
         <span class="tool-tip-text">Eraser</span>
     </div>
-    <div id="colors" class="tool-button tool-tip" (click)="showDropdown('colors')">
+    <div id="colors" class="tool-button tool-tip" (click)="toggleDropdown($event, 'colors')">
         <i class="fa fa-paint-brush">
             <div class="dropdown-caret">
                 <i class="fa fa-caret-right"></i>
@@ -22,7 +22,7 @@
             </div>
         </div>
     </div>
-    <div id="sizes" class="tool-button tool-tip" (click)="showDropdown('sizes')">
+    <div id="sizes" class="tool-button tool-tip" (click)="toggleDropdown($event, 'sizes')">
         <i class="fa fa-window-minimize">
             <div class="dropdown-caret">
                 <i class="fa fa-caret-right"></i>
@@ -63,7 +63,7 @@
     <div class="vertical-separator flex-vertical">
         <div class="tool-separator"></div>
     </div>
-    <div id="move" class="tool-button tool-tip" (click) = "selectTool(false)">
+    <div id="pan" class="tool-button tool-tip" (click) = "selectTool(false)">
         <i class="fa fa-hand-paper-o"></i>
         <span class="tool-tip-text">Move</span>
     </div>
