--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -1,6 +1,6 @@
 <!-- Main toolbar with Drawings Tools -->
 <div class="tool-menu toolbar flex-vertical canvas-component">
-    <div id="pen" class="tool-button tool-tip active" (click)="selectTool(true)">
+    <div id="pen" class="tool-button tool-tip active" (click)="selectTool(true, 'source-over')">
         <i class="fa fa-pencil"></i>
         <span class="tool-tip-text">Pen</span>
     </div>
