Mobile tool icon now changes to reflect current tool

--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -1,6 +1,6 @@
 <!-- Mobile tool button -->
 <div id="mobile-tool" class="mobile-button canvas-component" (click)="dropToolbar()">
-    <i class="fa fa-pencil"></i>
+    <i id="mobile-icon" class="fa fa-pencil"></i>
 </div>
 <!-- Main toolbar with Drawings Tools -->
 <div id="main-toolbar" class="tool-menu toolbar flex-vertical canvas-component">
