Fix #35: Firefox size and share modal bugs
 * Can change size on Firefox
 * Can open share modal on Firefox
 * Dropdowns no longer appear on top of modals

--- a/src/app/invite/invite.component.html
+++ b/src/app/invite/invite.component.html
@@ -1,4 +1,4 @@
-<div id="share-button" class="tool-tip" (click)="showShareModal()">
+<div id="share-button" class="tool-tip" (click)="showShareModal($event)">
     <i class="fa fa-user-plus"></i>
     <span id="copy-tooltip" class="tool-tip-text">Share Room</span>
 </div>
