Change modal input text color from white to black

--- a/src/app/invite/invite.component.css
+++ b/src/app/invite/invite.component.css
@@ -39,6 +39,7 @@ html body {
 .modal-item {
     padding: 2px;
     margin: 2px;
+    color: black;
 }
 .modal-text {
     padding: 10px 0px 0px 0px;
