Users has its own component now

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -40,13 +40,7 @@
                 [scaleValue]="scaleValue">
     </app-tools>
     <!-- User Count -->
-    <div class="bottom-right-bar bar flex-horizontal canvas-component">
-        <div id="num-users-text" class="bar-text"></div>
-        <div class="bar-separator"></div>
-        <div id="num-users" class="bar-button">
-            <i class="fa fa-user-circle"></i>
-        </div>
-    </div>
+    <app-users></app-users>
 </div>
 </body>
 
