--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -54,6 +54,19 @@ html body {
     transition: opacity 1s, visibility 1s;
 }
 
+.alert-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+}
+#alert {
+    position: fixed;
+    display: none;
+    text-align: center;
+    width: auto;
+}
+
 /* Share Bar */
 .top-right-bar {
     right: 10px;
