--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -5,6 +5,7 @@
     <title>Drawback</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 <div>
@@ -13,6 +14,10 @@
     <app-title [roomID]=id
                 (sendTitle)="drawService.sendTitle($event.roomID, $event.name)">
     </app-title>
+    <!-- Error Alerts -->
+    <div class="top-bar alert-container canvas-component">
+        <div id='alert' class="alert alert-danger"></div>
+    </div>
     <!-- Invite, Download, and Upload Bar -->
     <div class="top-bar top-right-bar flex-horizontal canvas-component">
         <div class="bar flex-horizontal">
@@ -48,6 +53,9 @@
         </div>
     </div>
 </div>
+<!-- Bootstrap and JQuery Javascript files -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 </body>
 
 </html>
