Colors and username show, need to be able to modify username and create better frontend

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -41,7 +41,7 @@
                 [scaleValue]="scaleValue">
     </app-tools>
     <!-- User Count -->
-    <app-users [roomID]=id></app-users>
+    <app-users [roomID]=id [socketID]=socketID> </app-users>
 </div>
 </body>
 
