--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -5,16 +5,17 @@
         <div class="fa fa-user-circle dropup" (click)="toggleUsers()">
             <div class="userDropUp" *ngFor="let foo of userInfo; let i = index">
                 <div class="flex-horizontal" *ngIf="userInfo[i].socketID != socketID; else user">
-                    <div [style.color]="userInfo[i].userColor">
+                    <div class="userColor" [style.color]="userInfo[i].userColor">
                         <i class="fa fa-circle"></i>
                     </div>
-                    <div>
+                    <div class="userName">
                         {{ userInfo[i].userName}}
                     </div>
                 </div>
                 <ng-template #user>
                     <div class="flex-horizontal">
-                        <div [style.color]="userInfo[i].userColor">
+                        <i class="fa fa-caret-right"></i>
+                        <div class="userColor" [style.color]="userInfo[i].userColor">
                             <i class="fa fa-circle"></i>
                         </div>
                         <input type = "text" [(ngModel)]="userInfo[i].userName">
