Alert user if not connected to server at init
 * Fix alert color being a strange green

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -16,7 +16,7 @@
     </app-title>
     <!-- Error Alerts -->
     <div class="top-bar alert-container canvas-component">
-        <div id='alert' class="alert alert-danger"></div>
+        <div id='alert' class="alert alert-danger">Not conected to the server.</div>
     </div>
     <!-- Invite, Download, and Upload Bar -->
     <div class="top-bar top-right-bar flex-horizontal canvas-component">
