--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -18,6 +18,7 @@
     <div class="top-bar alert-container canvas-component">
         <div id='alert' class="alert alert-danger">Not conected to the server.</div>
     </div>
+    <div id='overlay' class='modal'></div>
     <!-- Invite, Download, and Upload Bar -->
     <div class="top-bar top-right-bar flex-horizontal canvas-component">
         <div class="bar flex-horizontal">
