Fix jittery scroll; stop highlighting items

--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -1,7 +1,9 @@
 html body {
     font-family: sans-serif;
     overflow: hidden;
+    position: fixed;
     height: 100%;
+    user-select: none;
 }
 #canvas {
     position: relative;
