Press enter to finish changing user's name

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -19,7 +19,7 @@
                         <div class="userColor" [style.color]="userInfo[i].userColor">
                             <i class="fa fa-circle"></i>
                         </div>
-                        <input type = "text" [(ngModel)]="userInfo[i].userName" (ngModelChange)="onChange($event)">
+                        <input id='my-name' type = "text" [(ngModel)]="userInfo[i].userName" (ngModelChange)="onChange($event)" (keydown)='unfocus($event)'>
                     </div>
                 </ng-template>
             </div>
