Dropup size limited, scroll to see others

--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -311,6 +311,8 @@ html body {
     background-color: #555;
     border-radius: 8px;
     cursor: default;
+    max-height: 125px;
+    overflow-y: scroll;
 }
 
 #userDropUp {
